optional ssh params to use default, shutdown remote host, more detailed validation messages
