# app/views/core.py
@@ -14,6 +14,7 @@ from ..logic.core import (
     get_cpu_stat,
     reboot_host,
     scan_local_net,
+    shutdown_host,
     wakeup_host,
 )
 
@@ -22,9 +23,9 @@ core = Blueprint('core', __name__)
 
 class SshActionSchema(Schema):
     host = HostField(required=True)
-    port = PortField(missing=22)
-    login = fields.String(required=True)
-    password = fields.String(required=True)
+    port = PortField()
+    login = fields.String()
+    password = fields.String()
 
 
 class WakeupSchema(Schema):
@@ -48,7 +49,7 @@ def ping(body: dict):
 @core.route('/wake/', methods=['POST'])
 @parse_body(WakeupSchema())
 def wake(body: dict):
-    """wakeup host by Wale on lan."""
+    """wakeup host by Wake on Lan."""
     wakeup_host(**body)
     return '', 204
 
@@ -64,12 +65,6 @@ def cpu_stat(body: dict):
     return stat._asdict()
 
 
-@core.route('/scan_net/', methods=['POST'])
-def scan_net():
-    """search all hosts in local net."""
-    return {'hosts': scan_local_net()}
-
-
 @core.route('/reboot/', methods=['POST'])
 @parse_body(SshActionSchema())
 def reboot(body: dict):
@@ -79,3 +74,20 @@ def reboot(body: dict):
     except RemoteExecError as e:
         return e.as_dict(), 400
     return '', 204
+
+
+@core.route('/shutdown/', methods=['POST'])
+@parse_body(SshActionSchema())
+def shutdown(body: dict):
+    """immediately shutdown the remote host (ssh)."""
+    try:
+        shutdown_host(**body)
+    except RemoteExecError as e:
+        return e.as_dict(), 400
+    return '', 204
+
+
+@core.route('/scan_net/', methods=['POST'])
+def scan_net():
+    """search all hosts in local net."""
+    return {'hosts': scan_local_net()}
